unpackaged/main/default/objects/DOF_Item__c/DOF_Item__c.object-meta.xml
<CustomObject>
    <description>Used for DOF Items added against the parent DOF Item</description>
    <label>DOF Item</label>
    <nameField>
        <displayFormat>DFM-{000000}</displayFormat>
        <label>DOF Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DOF Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>