unpackaged/main/default/objects/DOF_Item__c/fields/counter__c.field-meta.xml
<CustomField>
    <fullName>counter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>