unpackaged/main/default/objects/DOF_Item__c/fields/DOF__c.field-meta.xml
<CustomField>
    <fullName>DOF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to parent DOF</inlineHelpText>
    <label>DOF</label>
    <referenceTo>DOF__c</referenceTo>
    <relationshipLabel>DOF Items</relationshipLabel>
    <relationshipName>DOF_Items</relationshipName>
    <type>Lookup</type>
</CustomField>