unpackaged/main/default/objects/DOF_Item__c/fields/Entered_Price__c.field-meta.xml
<CustomField>
    <fullName>Entered_Price__c</fullName>
    <inlineHelpText>The price entered for the item on the mobile app</inlineHelpText>
    <label>Entered Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>