unpackaged/main/default/objects/DOF_Item__c/fields/Exp_Date_Txt__c.field-meta.xml
<CustomField>
    <fullName>Exp_Date_Txt__c</fullName>
    <formula>CASE(MONTH( Expiry_Date__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)&amp; &quot; &quot; &amp;
TEXT(DAY(Expiry_Date__c))
&amp; &quot;, &quot;&amp; TEXT(YEAR( Expiry_Date__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp Date Txt</label>
    <type>Text</type>
</CustomField>