unpackaged/main/default/objects/DOF_Item__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <inlineHelpText>Lot number for manual entered product</inlineHelpText>
    <label>Lot Number</label>
    <length>19</length>
    <type>Text</type>
</CustomField>