unpackaged/main/default/objects/DOF_Item__c/fields/MC_PLU_DOF__c.field-meta.xml
<CustomField>
    <fullName>MC_PLU_DOF__c</fullName>
    <inlineHelpText>Used by the Mobile App to relate the child DOF Item to the parent DOF</inlineHelpText>
    <label>MC_PLU_DOF</label>
    <type>TextArea</type>
</CustomField>