unpackaged/main/default/objects/DOF_Item__c/fields/MC_Proxy_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Proxy_ID__c</fullName>
    <inlineHelpText>MobileCaddy managed package required field</inlineHelpText>
    <label>MC_Proxy_ID</label>
    <type>TextArea</type>
</CustomField>