unpackaged/main/default/objects/DOF_Item__c/fields/MC_Restrict_001__c.field-meta.xml
<CustomField>
    <fullName>MC_Restrict_001__c</fullName>
    <formula>DOF__r.MC_Restrict_001__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC_Restrict_001</label>
    <type>Checkbox</type>
</CustomField>