unpackaged/main/default/objects/DOF_Item__c/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>