unpackaged/main/default/objects/DOF_Item__c/fields/Order_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Code__c</fullName>
    <formula>Product__r.Catalogue_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Code</label>
    <type>Text</type>
</CustomField>