unpackaged/main/default/objects/DOF_Item__c/fields/Order_code_process_run__c.field-meta.xml
<CustomField>
    <fullName>Order_code_process_run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order code process run</label>
    <type>Checkbox</type>
</CustomField>