unpackaged/main/default/objects/DOF_Item__c/fields/Price_Entered__c.field-meta.xml
<CustomField>
    <fullName>Price_Entered__c</fullName>
    <inlineHelpText>Selected by the app to show if the price is entered or no charge</inlineHelpText>
    <label>Price Entered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price Entered</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>