unpackaged/main/default/objects/DOF_Item__c/fields/price_for_order_form__c.field-meta.xml
<CustomField>
    <fullName>price_for_order_form__c</fullName>
    <formula>IF(Entered_Price__c=0.00, &quot;No Charge&quot;, 

CASE( CurrencyIsoCode , 
&quot;GBP&quot;, &quot;£&quot;,
&quot;USD&quot;, &quot;$&quot;,NULL)
&amp; text( floor( Entered_Price__c ) ) + &quot;.&quot; + right( text( ( 1 + Entered_Price__c - floor( Entered_Price__c ) ) * 100 ), 2 ))</formula>
    <label>price for order form</label>
    <type>Text</type>
</CustomField>