unpackaged/main/default/objects/DOF_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When scanned on the device this is the lookup that relates the DOF Item to the Product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Mobile_Refresh__c</referenceTo>
    <relationshipLabel>DOF Items</relationshipLabel>
    <relationshipName>DOF_Items</relationshipName>
    <type>Lookup</type>
</CustomField>