unpackaged/main/default/objects/DOF_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>IF( ISBLANK(  Product__c  ) ,  Product_Name_from_Lot_Number__c ,   Product__r.Product_Name__c )</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>