unpackaged/main/default/objects/DOF_Item__c/fields/Product_Name_from_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_from_Lot_Number__c</fullName>
    <label>Product Name from Lot Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>