unpackaged/main/default/objects/DOF_Item__c/fields/Scanned__c.field-meta.xml
<CustomField>
    <fullName>Scanned__c</fullName>
    <formula>IF( Scanned_Item__c = TRUE, &quot;Yes&quot;, NULL)</formula>
    <label>Scanned</label>
    <type>Text</type>
</CustomField>