unpackaged/main/default/objects/DOF_Item__c/fields/Scanned_Item__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Item__c</fullName>
    <formula>IF(ISBLANK(Product_Name_from_Lot_Number__c ) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scanned Item</label>
    <type>Checkbox</type>
</CustomField>